<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.TerminosCondiciones">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/empresa_imagen"
                    android:src="@drawable/empresa"
                    tools:ignore="MissingConstraints" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/pol_tica_de_t_rminos_y_condiciones_de_concretoschile"
                    android:textColor="@color/black"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/bienvenido_a_concretoschile_el_acceso_a_los_servicios_de_parazonapps_requiere_que_ud_el_usuario_consienta_los_presentes_t_rminos_y_condiciones"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/condiciones_de_uso"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/parrafo_condiciones"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/c_lculos"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/calculos_basado"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/concreto_f_c"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgtable1"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/tablafc"
                    android:src="@drawable/tablafc" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/concreto_en_volumenes"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgtable2"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/tablavolumenes"
                    android:src="@drawable/tablavolumen" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/morteros2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgtable3"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/tablamorteros"
                    android:src="@drawable/tablamorteros" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/hormig_n"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgtable4"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/tablahormigon"
                    android:src="@drawable/tablahormigones" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/confidencialidad"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/parrafo_confidencial"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tcw39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/servicios"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/parrafo_servicio"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"/>

            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>